--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <label for="201">
             </div>
             <div class="feedbak">
-                <textarea rows="10" cols="48" placeholder="Your Feedback"></textarea>
+                <textarea rows="10" cols="48" placeholder="Your Feedback" name=feedback></textarea>
             </div>
          </form>
          <div class="button">
